Fix: preserve image aspect ratio on mobile (height: auto)

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a {
 
 img {
   width: 100%;
+  height: auto;
   display: block;
 }
 
